# feather-etl

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/rules/: feather-etl-project.md
docs/: CONTRIBUTING.md  prd.md  research.md  testing-feather-etl.md
docs/plans/: 2026-03-26-slice1-foundation.md  2026-03-27-slice2-change-detection.md  2026-03-27-slice3-incremental-extraction.md  2026-03-27-slice7-sqlserver-source.md  2026-03-27-slice8-transforms.md  2026-03-28-mvp-test-bugfixes.md  2026-03-29-remaining-slices.md
docs/plans/.annotations/: 2026-03-27-slice2-change-detection.json  2026-03-27-slice8-transforms.json
docs/reviews/: 2026-03-26-slice1-review-2.md  2026-03-26-slice1-review.md  2026-03-27-slice2-3-review-2.md  2026-03-27-slice2-3-review.md
scripts/: create_sample_erp_fixture.py  create_test_fixture.py  hands_on_test.sh
src/feather/: __init__.py  cli.py  config.py  init_wizard.py  pipeline.py  state.py  transforms.py
src/feather/destinations/: __init__.py  duckdb.py
src/feather/sources/: __init__.py  csv.py  database_source.py  duckdb_file.py  file_source.py  registry.py  sqlite.py  sqlserver.py
tests/: conftest.py  test_cli.py  test_config.py  test_destinations.py  test_e2e.py  test_incremental.py  test_integration.py  test_pipeline.py  test_sources.py  test_sqlserver.py  test_state.py  test_transforms.py
tests/fixtures/: client_update.duckdb  sample_erp.duckdb
